[gd_scene load_steps=3 format=3 uid="uid://5aa55xos3rtk"]

[ext_resource type="Script" uid="uid://b4y8q8oal15ju" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://b8ortfib2oxsg" path="res://Addons/textures/back_menu.jpg" id="2_ekxnf"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_l6cm7")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_ekxnf")
expand_mode = 1
stretch_mode = 2

[node name="MainPanel" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="MainPanel/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.40018785, 1)
theme_override_font_sizes/font_size = 49
text = "üé≤ FARKLE"
horizontal_alignment = 1

[node name="BtnNewGame" type="Button" parent="MainPanel/VBox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üéÆ Nov√° hra"

[node name="BtnLoadGame" type="Button" parent="MainPanel/VBox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üìÇ Pokraƒçovat"

[node name="BtnStatistics" type="Button" parent="MainPanel/VBox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üìä Statistiky"

[node name="BtnSettings" type="Button" parent="MainPanel/VBox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚öôÔ∏è Nastaven√≠"

[node name="BtnQuit" type="Button" parent="MainPanel/VBox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚ùå Ukonƒçit"

[node name="RegisterPanel" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="RegisterPanel"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="RegisterPanel/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.40018785, 1)
theme_override_font_sizes/font_size = 49
text = "üìù Registrace"
horizontal_alignment = 1

[node name="UsernameInput" type="LineEdit" parent="RegisterPanel/VBox"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
placeholder_text = "U≈æivatelsk√© jm√©no (3+ znaky)"

[node name="DisplayNameInput" type="LineEdit" parent="RegisterPanel/VBox"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
placeholder_text = "Va≈°e jm√©no"

[node name="ErrorLabel" type="Label" parent="RegisterPanel/VBox"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)

[node name="BtnRegister" type="Button" parent="RegisterPanel/VBox"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "‚úÖ Zaregistrovat"

[node name="BtnBack" type="Button" parent="RegisterPanel/VBox"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "‚Üê Zpƒõt
"

[node name="SelectPlayerPanel" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="SelectPlayerPanel"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="SelectPlayerPanel/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.40018785, 1)
theme_override_font_sizes/font_size = 49
text = "üë§ Vyberte hr√°ƒçe"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="SelectPlayerPanel/VBox"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2

[node name="PlayerListContainer" type="VBoxContainer" parent="SelectPlayerPanel/VBox/ScrollContainer"]
layout_mode = 2

[node name="BtnNewPlayer" type="Button" parent="SelectPlayerPanel/VBox"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚ûï Nov√Ω hr√°ƒç"

[node name="BtnBack" type="Button" parent="SelectPlayerPanel/VBox"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚Üê Zpƒõt"

[node name="GameSetupPanel" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="GameSetupPanel"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="GameSetupPanel/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.40018785, 1)
theme_override_font_sizes/font_size = 49
text = "üéÆ P≈ô√≠prava hry"
horizontal_alignment = 1

[node name="LblPlayer" type="Label" parent="GameSetupPanel/VBox"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
text = "üë§ Hr√°ƒç: ..."

[node name="AILevelPanel" type="Panel" parent="GameSetupPanel/VBox"]
visible = false
custom_minimum_size = Vector2(400, 80)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="GameSetupPanel/VBox/AILevelPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="GameSetupPanel/VBox/AILevelPanel/VBox"]
layout_mode = 2
text = "ü§ñ Vyberte obt√≠≈ænost AI:"

[node name="HBoxContainer" type="HBoxContainer" parent="GameSetupPanel/VBox/AILevelPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BtnEasy" type="Button" parent="GameSetupPanel/VBox/AILevelPanel/VBox/HBoxContainer"]
layout_mode = 2
text = "üòä EASY"

[node name="BtnNormal" type="Button" parent="GameSetupPanel/VBox/AILevelPanel/VBox/HBoxContainer"]
layout_mode = 2
text = "üéÆ NORMAL"

[node name="BtnHard" type="Button" parent="GameSetupPanel/VBox/AILevelPanel/VBox/HBoxContainer"]
layout_mode = 2
text = "üí™ HARD"

[node name="BtnExpert" type="Button" parent="GameSetupPanel/VBox/AILevelPanel/VBox/HBoxContainer"]
layout_mode = 2
text = "üß† EXPERT"

[node name="ModeSelection" type="HBoxContainer" parent="GameSetupPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BtnSinglePlayer" type="Button" parent="GameSetupPanel/VBox/ModeSelection"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "üë§ Single"

[node name="BtnMultiPlayer" type="Button" parent="GameSetupPanel/VBox/ModeSelection"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "üë• Local"

[node name="BtnOnlineMulti" type="Button" parent="GameSetupPanel/VBox/ModeSelection"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "üåê Online"

[node name="BtnStartGame" type="Button" parent="GameSetupPanel/VBox"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üé≤ Spustit hru"

[node name="BtnBack" type="Button" parent="GameSetupPanel/VBox"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚Üê Zpƒõt"

[node name="StatisticsPanel" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="StatisticsPanel"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="StatisticsPanel/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.40018785, 1)
theme_override_font_sizes/font_size = 49
text = "üìä Statistiky"
horizontal_alignment = 1

[node name="LblPlayer" type="Label" parent="StatisticsPanel/VBox"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
text = "üìä Statistiky: ..."

[node name="ScrollContainer" type="ScrollContainer" parent="StatisticsPanel/VBox"]
custom_minimum_size = Vector2(400, 250)
layout_mode = 2

[node name="StatsList" type="VBoxContainer" parent="StatisticsPanel/VBox/ScrollContainer"]
layout_mode = 2

[node name="BtnBack" type="Button" parent="StatisticsPanel/VBox"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚Üê Zpƒõt"

[node name="SettingsPanel" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="SettingsPanel/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.40018785, 1)
theme_override_font_sizes/font_size = 49
text = "‚öôÔ∏è Nastaven√≠"
horizontal_alignment = 1

[node name="LblPlayer" type="Label" parent="SettingsPanel/VBox"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
text = "‚öôÔ∏è Nastaven√≠: ...
"

[node name="VolumeLabel" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
text = "üîä Hlasitost:"

[node name="VolumeSlider" type="HSlider" parent="SettingsPanel/VBox"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
value = 80.0

[node name="BtnDeletePlayer" type="Button" parent="SettingsPanel/VBox"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
text = "üóëÔ∏è Smazat hr√°ƒçe"

[node name="BtnResetSettings" type="Button" parent="SettingsPanel/VBox"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
text = "üîÑ Resetovat"

[node name="BtnBack" type="Button" parent="SettingsPanel/VBox"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚Üê Zpƒõt"
